--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  http: ^1.1.0
+  intl: ^0.18.1
+  logger: ^2.0.1
+  url_launcher: ^6.1.12
 
 
   
@@ -26,6 +30,7 @@ dependencies:
 
   #-------State Management-------#
   get: ^4.6.5
+  get_storage:
 
 dev_dependencies:
   flutter_test:
