--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,6 @@
 name: davinciweb
 description: "A new Flutter project."
 
-
 publish_to: 'none'
 version: 1.0.0+1
 
@@ -13,12 +12,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+
+  #-------Utilidades-------#
   http: ^1.1.0
   intl: ^0.18.1
   logger: ^2.0.1
   url_launcher: ^6.1.12
-
-
+  
   
   #-------Iconos-------#
   cupertino_icons: ^1.0.2
@@ -28,16 +28,16 @@ dependencies:
   firebase_auth: ^4.17.8
   cloud_firestore: ^4.15.8
 
-  #-------State Management-------#
+  #-------Manejo de estados de widgets-------#
   get: ^4.6.5
-  get_storage:
+  get_storage: ^2.1.1
 
+#-------Flutter-------#
 dev_dependencies:
   flutter_test:
-    sdk: flutter
-  
+    sdk: flutter  
   flutter_lints: ^3.0.2
-
+  flutter_native_splash: ^2.3.10
 
 flutter:
   uses-material-design: true
@@ -47,3 +47,12 @@ flutter:
     - assets/icons/
     - assets/images/
     - assets/logos/
+
+#------------------Splash Screen------------------#
+flutter_native_splash:
+  android: false
+  ios: false
+  web: true
+  color: "#E2EDF1"
+  image: "assets/logos/davinciLogo.png"
+  web_image_mode: center
