--- a/firebase.json
+++ b/firebase.json
@@ -1,18 +1,6 @@
 {
-  "flutter": {
-    "platforms": {
-      "dart": {
-        "lib/firebase_options.dart": {
-          "projectId": "davinciweb-3e35f",
-          "configurations": {
-            "web": "1:367499569708:web:3638ca61e94b311d9b3f89"
-          }
-        }
-      }
-    }
-  },
   "hosting": {
-    "source": ".",
+    "public": "build/web",
     "ignore": [
       "firebase.json",
       "**/.*",
